--- a/digitalfile/templates/digitalfile/createfile.html
+++ b/digitalfile/templates/digitalfile/createfile.html
@@ -1,69 +1,66 @@
 {% extends 'digitalfile/base.html'%}
-
 {% block content %}
 <!DOCTYPE html>
 <html>
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/bootstrap-responsive.css">
   <link rel="icon" type="image/png"  href="../../media/uploads/Logo_DigitalDrawer1.png">
-
   </head>
-  <body><br><br><br><br>
-<p style="text-align:right; margin-right:4.9%;">
-Hello, <i> {{ user.username }}!</i>
-</p>
-<div class="row justify-content-center mt-5">
-       <div class="col-md-5 text-center">
-<h2>Add new files</h2>
-</div>
-    </div> <div class="row justify-content-center mt-5">
+  <body>
+<br><br><br><br>
+<p style="text-align:right; margin-right:4.9%;">Hello, <i> {{ user.username }}!</i></p>
+    <div class="row justify-content-center mt-5">
+        <div class="col-md-5 text-center">
+            <h2>Add new files</h2>
+        </div>
+    </div> 
+    <div class="row justify-content-center mt-5">
         <div class="col-md-5">
-    {% if error %}
-                   <div class="alert alert-danger" role="alert">
-                       {{ error }}
-                   </div>
-               {% endif %}
-
-<form method="POST" enctype="multipart/form-data">
-{% csrf_token %}
-    <div class="form-group">
-        <label for="Name">Name</label>
-        <input type="text" name="Name" class="form-control" id="Name" required>
+                {% if error %}
+            <div class="alert alert-danger" role="alert">
+                {{ error }}
+            </div>
+                {% endif %}
+            <form method="POST" enctype="multipart/form-data">
+                        {% csrf_token %}
+                <div class="form-group">
+                    <label for="Name">Name</label>
+                        <input type="text" name="Name" class="form-control" id="Name" required>
+                </div>
+                <div class="form-group">
+                    <label for="Surname">Surname</label>
+                        <input type="text" name="Surname" class="form-control" id="Surname" required>
+                </div>
+                <div class="form-group">
+                    <label for="Email">E-mail</label>
+                        <input type="email" name="Email" class="form-control" id="Email" required>
+                </div>
+                <div class="form-group">
+                    <label for="Title">Title</label>
+                        <input type="text" name="Title" class="form-control" id="Title" required>
+                </div>
+                <div class="form-group">
+                    <label for="Description">Description</label>
+                        <textarea name="Description" class="form-control" id="Description" ></textarea>
+                </div>
+                <div class="form-group">
+                    <label for="Field">Field</label>
+                        <input type="text" name="Field" class="form-control" id="Field" required>
+                </div>
+                <div class="form-group">
+                    <label for="FileUpload">Choose a file</label><br>
+                        <input type="file" name="FileUpload" id="FileUpload" required>
+                </div>
+                <br>
+                <div class="text-center">
+                    <button type="submit" class="btn btn-primary " >Add</button></div>
+            </form>
+        </div>
     </div>
-    <div class="form-group">
-        <label for="Surname">Surname</label>
-        <input type="text" name="Surname" class="form-control" id="Surname" required>
-    </div>
-    <div class="form-group">
-        <label for="Email">E-mail</label>
-        <input type="email" name="Email" class="form-control" id="Email" required>
-    </div>
-    <div class="form-group">
-        <label for="Title">Title</label>
-        <input type="text" name="Title" class="form-control" id="Title" required>
-    </div>
-    <div class="form-group">
-        <label for="Description">Description</label>
-        <textarea name="Description" class="form-control" id="Description" ></textarea>
-    </div>
-    <div class="form-group">
-        <label for="Field">Field</label>
-        <input type="text" name="Field" class="form-control" id="Field" required>
-    </div>
-    <div class="form-group">
-        <label for="FileUpload">FileUpload</label><br>
-        <input type="file" name="FileUpload" id="FileUpload" required>
-    </div><br>
-<div class="text-center">
-<button type="submit" class="btn btn-primary " >Add</button></div>
-</form>
-</div>
-</div>
 
 {% endblock %}
