--- a/digitalfile/templates/digitalfile/updatefiles.html
+++ b/digitalfile/templates/digitalfile/updatefiles.html
@@ -1,17 +1,15 @@
 {% extends 'digitalfile/base.html'%}
-
-{% block content %}<!DOCTYPE html>
+{% block content %}
+<!DOCTYPE html>
 <html>
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/bootstrap-responsive.css">
   <link rel="icon" type="image/png"  href="../../media/uploads/Logo_DigitalDrawer1.png">
-
   </head>
   <body><br><br><br><br>
 <p style="text-align:right; margin-right:4.9%;">
@@ -27,9 +25,7 @@ Hello, <i> {{ user.username }}!</i>
               </div>
           {% endif %}
 <form method="POST" enctype="multipart/form-data">
-
 {% csrf_token %}
-
 <div class="form-group">
     <label for="Name">Name</label>
     <input type="text" name="Name" class="form-control" id="Name" value="{{ digitalfile.Name }}" required>
